# openai_ros

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
launch/: openai.launch
scripts/: openai_node.py
srv/: Completion.srv
